FlightPath 4.x Changelog
========================

2012-07-30
  If a term_id doesn't have a matching description, just display the term_id itself (instead
  of the text "unknown term.")
  
  Added a not_released_grades_terms field to the advising settings.
  
  Added to the hook.api.php file, to help document hooks in FlightPath.
  

2012-07-15
  The default submit and validate handlers are explicitly added to all forms now.
  
  On the admin page, the current catalog year being edited is controlled through
  a pull-down menu.


2012-07-14
  When searching, major=MAJORCODE now displays a list of students with that major.
  
  Also, if you enter an asterisk (*) with your search, it will bypass the
  extra search conditions and rank checks.
  
  Also, if there is only one result, it immediately redirects to the View
  tab with that student's degree plan loaded.


2012-07-13
  Added "cwid" field to watchog, users, faculty, staff table.  Advising records need to be
  saved off this cwid instead of the auto-increment user_id.
  

2012-07-10
  Moved user functions into its own module, user, and enabled on install by default.
  Also fixed a few bugs int he user module.
  

2012-07-09
  On install, insert basic permissions for the authenticated user.
  

2012-07-06
  Enabled announcements and update_status modules on FlightPath first install,
  and created a new sample announcement when the announcement module is installed
  the first time.

  Added check to install.php to make sure custom directory was writable, displaying
  error if it is not.
  
  Made it to where tabs don't show up for advisors until they select a student.
  
  Little search in the corner doesn't show up unless you have permission to search.
  
  Fixed bug where "objList" was being required instead of "ObjList".  It caused a fatal
  error on Linux, but not on Windows, interestingly enough.  Difference in PHP versions?
  
 
2012-07-05
  Started update_status module.
  

2012-06-30